# Cpp_Swig_Ruby_Python_MCVE

./: .gitignore  CMakeLists.txt  CommonImport.i  EmbeddedHelp.hpp  EmbeddedScripting.i  GC_Value.hpp  JsonCpp.cpp  JsonCpp.hpp  JsonCpp.i  Measure.cpp  Measure.hpp  Measure.i  Model.cpp  Model.hpp  ModelObject.cpp  ModelObject.hpp  Person.cpp  Person.hpp  Person.i  PythonEngine.cpp  PythonEngine.hpp  README.md  RubyEngine.cpp  RubyEngine.hpp  Runner.hpp  ScriptEngine.hpp  SpecialRunner.hpp  String.cpp  String.hpp  TestAPI.hpp  Time.hpp  Time.i  embedded_help.rb  main.cpp
csharp/: Mylib.csproj_dotnet.in
embedded/: CMakeLists.txt  EmbedFiles.cmake  embedded_files.hxx.in
python/: measure.py  test_measure.py  test_python_only.py
ruby/: test_measure.rb  test_pycall.rb  test_pycall_script.rb  test_pycall_use_cpp_to_convert_pointers.rb  test_pycall_workaround.rb  test_ruby_only.rb
